--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,14 @@
 @import "tailwindcss";
 
+html{
+
+  overflow-y: scroll;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  height:100%;
+  width:100%;
 }
