--- a/app/components/global/nav-sibiu-valcea.module.scss
+++ b/app/components/global/nav-sibiu-valcea.module.scss
@@ -1,6 +1,21 @@
 .nav-sibiu-valcea{
-  a{
-    line-height: 40px;
-    text-align:center;
+   :global{
+        a{
+          line-height: 40px;
+          font-size:40px;
+          text-align:center;
+          font-weight: bold;
+          color: #fff;
+
+          text-shadow: 0px 0px 60px rgba(0, 0, 0, 0.3);
+      }
+
+      @media (max-width: 768px) {
+          a{
+              font-size:30px;
+
+          }
+
+      }
   }
 }
