--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,8 @@
 @import "tailwindcss";
 
 html{
-
+  height:100%;
+  width:100%;
   overflow-y: scroll;
 }
 
@@ -11,4 +12,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   height:100%;
   width:100%;
+}
+
+.clearfix::after {
+    display: block;
+    visibility: hidden;
+    content: "";
+    clear: both;
+    height: 0;
 }
