--- a/app/(pages)/(projects)/[slug]/page.module.scss
+++ b/app/(pages)/(projects)/[slug]/page.module.scss
@@ -1,11 +1,31 @@
 .page-container{
-  float:left;
   position:relative;
-  height: calc(100vh - 40px);
-  width: 100%;
-
+  float:left;
+  width:100%;
+  
+  
 :global{
+    section.swiper-section{
+      position:relative;
+      
+      height: calc(100vh - 40px);
+      width: 100%;
 
+    }
+  
+    section.info{
+        width:100%;
+        float:left;
+        padding:12px;
+
+        &.border-bottom{
+          border-bottom: 1px solid #333;
+        }
+        .col{
+          width:50%;
+          float:left;
+        }
+    }
 
     }
 
