--- a/app/globals.css
+++ b/app/globals.css
@@ -36,14 +36,50 @@ body {
   border-radius: 15px;
   line-height:26px;
   text-align: center;
+  cursor:pointer;
 
-  &:hover{
-    background-color:#CEFB08;
-    color: #000;
+  
+
+  &.btn-primary{
+    border: 2px solid #CEFB08;
+    color: #CEFB08;
+
+    &.sibiu{
+      border: 2px solid #CEFB08;
+      color: #CEFB08;
+
+      &:hover{
+        background-color:#CEFB08;
+        color: #000;
+      }
+    }
+
+    &.valcea{
+      border: 2px solid  #ff0db9;
+      color: #ff0db9;
+      &:hover{
+        background-color:#ff0db9;;
+        color: #000;
+      }
+    }
+
+    &:hover{
+      background-color:#CEFB08;
+      color: #000;
+    }
+    
   }
 
-  .primary{
+  &.btn-secondary{
+    background-color:#CEFB08;
+      color: #000;
+    
 
+    &:hover{
+      background-color:transparent;
+      color: #CEFB08;
+      
+    }
   }
 
 
@@ -75,4 +111,12 @@ body {
 .has-portable-text p{
   min-height: 12px;
   width: 100%;
+}
+
+.position-relative{
+  position:relative;
+}
+
+.w-100{
+  width:100%;
 }
