--- a/app/components/global/nav-sibiu-valcea.module.scss
+++ b/app/components/global/nav-sibiu-valcea.module.scss
@@ -8,6 +8,10 @@
           color: #fff;
 
           text-shadow: 0px 0px 60px rgba(0, 0, 0, 0.3);
+
+          &:hover{
+            opacity:0.7;
+          }
       }
 
       @media (max-width: 768px) {
