--- a/app/components/global/team-section.module.scss
+++ b/app/components/global/team-section.module.scss
@@ -1,63 +1,76 @@
 
-.team-section{
+.team-container{
+  height:100%;
   width:100%;
-  height:600px;
-  overflow: hidden;
 
   :global{
 
-    img.title{
-    float:left;
-    height:100%;
-    margin: 0 150px;
-
-
-
+    .col-title{
+      float:left;
+      position:relative;
+      width:30%;
+      height:100%;
+      margin-left:5%;
     }
 
-    .member{
+    .col-members{
+      width:65%;
+      height:100%;
+      float:left;
+      .member{
 
-        position:relative;
-        width:200px;
-        height:300px;
-        margin:25px;
-        float:left;
+          position:relative;
+          width:200px;
+          height:300px;
+          margin:10px;
+          float:left;
 
-      .portrait{
-        width:200px;
-        height:200px;
-        float:left;
-        position:relative;
-        width:100%;
+        .portrait{
+          width:200px;
+          height:200px;
+          float:left;
+          position:relative;
+          width:100%;
 
-        &.placeholder{
-          width:160px;
-          height:160px;
-          margin:20px;
+          &.placeholder{
+            width:160px;
+            height:160px;
+            margin:20px;
+          }
+          
+          
         }
-        
-        
+
+        .name{
+          float:left;
+          position:relative;
+          font-weight: bold;
+          font-size: 16px;
+          width: 140%;
+          left: -20%;
+          text-align:center;
+          margin: 12px 0;
+        }
+
+        .role{
+          float:left;
+          position:relative;
+          font-size: 13px;
+          width:100%;
+          text-align:center;
+        }
+
       }
 
-      .name{
-        float:left;
-        position:relative;
-        font-weight: bold;
-        font-size: 16px;
-        width: 140%;
-        left: -20%;
-        text-align:center;
-        margin: 12px 0;
-      }
+      @media (max-width: 768px) {
+          .col-members{
 
-      .role{
-        float:left;
-        position:relative;
-        font-size: 13px;
-        width:100%;
-        text-align:center;
+            .member{
+              width: 200px;
+              height: 300px;
+            }
+          }
       }
-
-    }
+  }
   }
 }
