--- a/app/(pages)/(projects)/valcea/[slug]/page.module.scss
+++ b/app/(pages)/(projects)/valcea/[slug]/page.module.scss
@@ -1,4 +1,4 @@
-.page-container{
+.namespace-container{
   position:relative;
   float:left;
   width:100%;
@@ -14,19 +14,145 @@
     }
   
     section.info{
+        
         width:100%;
         float:left;
-        padding:12px;
+        overflow:hidden;
+        margin-top:30px;
+        padding:30px 12px;
 
         &.border-bottom{
           border-bottom: 1px solid #333;
         }
         .col{
-          width:50%;
+          
           float:left;
-        }
-    }
 
+          span.label{
+            float:left;
+            width:100%;
+            font-weight: 800;
+            font-size:18px;
+            line-height:30px;
+            text-transform: uppercase;
+          }
+
+          span.info{
+            float:left;
+            width:100%;
+            font-weight: normal;
+            font-size:18px;
+            line-height:30px;
+          }
+
+          h1{
+                font-weight: bold;
+                font-size:40px;
+                line-height: 50px;
+              }
+
+          span.date{
+                font-size:30px;
+                float:left;
+                width:100%;
+                &.sibiu { color: #CEFB08;}
+                &.valcea { color: #ff0db9;}
+              }
+
+          .map-container{
+            width:400px;
+            height:400px;
+          }
+
+          &.col-1{
+              width:650px;
+              margin-left:calc(50% - 550px);
+              padding-left: 30px;
+              &.has-portable-text p {
+                line-height:40px;
+              }
+          }
+
+          &.col-2{
+              width:550px;
+              padding-left: 30px;
+              margin-right:calc(50% - 650px);
+              font-weight: bold;
+              font-size:30px;
+              line-height: 40px;
+
+          }
+        }
+    
+
+      @media (max-width: 1200px) {
+        .col{
+          h1{
+            font-size:30px;
+            line-height:40px;
+          }
+
+          span.date{
+                font-size:24px;
+              }
+
+            &.col-1{
+                width:calc(55% - 30px);
+                margin-left:30px;
+                padding-left:0;
+            }
+
+            &.col-2{
+                width:calc(45% - 30px);
+                margin-right:30px;
+                font-weight: bold;
+                font-size:30px;
+                line-height: 30px;
+
+            }
+
+        }
+
+      }
+
+      @media (max-width: 768px) {
+        .col{
+          
+          h1{
+            font-size:30px;
+            line-height:40px;
+            margin-bottom:20px;
+          }
+
+          span.date{
+                font-size:24px;
+              }
+
+          .map-container{
+            width:100%;
+            height:400px;
+          }
+
+          &.col-1{
+            padding:0 10px;
+            margin-left:0;
+            margin-right:0;
+            width:100%;
+          }
+
+          &.col-2{
+            padding:0 10px;
+            margin-left:0;
+            margin-right:0;
+            margin-top:30px;
+            width:100%;
+
+          }
+
+        }
+
+      }
     }
+  }
 
 }
