added tours and events

--- a/app/components/contact-form/contact-form.module.scss
+++ b/app/components/contact-form/contact-form.module.scss
@@ -1,6 +1,6 @@
 
 
-.namespace-wrapper{
+.namespace-container{
 
  :global{
 
@@ -47,14 +47,6 @@
          height:50px;
          width:100%;
          padding:12px;
-
-         &.sibiu{
-            border-color: #CEFB08;
-         }
-
-         &.valcea{
-            border-color: #ff0db9;
-         }
       }
 
       .form-group.name{
