--- a/app/components/swiper/swiper-responsive/swiper-projects.module.scss
+++ b/app/components/swiper/swiper-responsive/swiper-projects.module.scss
@@ -24,9 +24,9 @@
           text-justify: inter-word;
 
           h6{
+            margin:0;
             text-align: left;
             font-size:32px;
-            color:#cefb08;
             margin-bottom:20px;
           }
         }
