--- a/app/components/global/cover-section.module.scss
+++ b/app/components/global/cover-section.module.scss
@@ -27,27 +27,33 @@
         left: 12%;
       }
 
-    .title{
+    .event-title{
       position:absolute;
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
+      text-align: center;
+      font-weight: normal;
       z-index:1;
+      margin:0;
       top:35%;
-      margin-left: 10%;
-      width:80%;
+      font-size:180px;
+      width:100%;
+      cursor:default;
+      pointer-events:none;
+      text-shadow: 0px 0px 130px rgba(0, 0, 0, 0.5)
 
     }
 
-    .subtitle{
+    .event-date{
       position:absolute;
-      background-size: contain;
-      background-position: center;
-      background-repeat: no-repeat;
+      text-align: center;
+      font-weight: normal;
       z-index:1;
+      margin:0;
       top:55%;
-      margin-left: 25%;
-      width:50%;
+      font-size:80px;
+      width:100%;
+      cursor:default;
+      pointer-events:none;
+      text-shadow: 0px 0px 130px rgba(0, 0, 0, 0.5)
 
     }
 
@@ -67,11 +73,11 @@
         }
       }
 
-      .title{
+      .event-title{
         display:none;
       }
 
-      .subtitle{
+      .event-date{
         z-index:1;
         top:85%;
         margin-left: 10%;
