--- a/app/components/global/nav-sibiu-valcea.module.scss
+++ b/app/components/global/nav-sibiu-valcea.module.scss
@@ -1,13 +1,14 @@
 .nav-sibiu-valcea{
   height:40px;
    :global{
+
         a{
+          text-decoration: unset;
           line-height: 40px;
           font-size:40px;
           text-align:center;
           font-weight: bold;
           color: #fff;
-
           text-shadow: 0px 0px 60px rgba(0, 0, 0, 0.3);
 
           &:hover{
@@ -18,7 +19,6 @@
       @media (max-width: 768px) {
           a{
               font-size:30px;
-
           }
 
       }
