--- a/app/components/global/cover-section.module.scss
+++ b/app/components/global/cover-section.module.scss
@@ -10,7 +10,7 @@
         width:100%;
         height:100%;
         background-color: #000;
-        opacity:0.2;
+        background: radial-gradient(ellipse at center, #00000000 0%, rgb(0 0 0 / 17%) 0%, rgb(0 0 0 / 75%) 100%);
         position:absolute;
         z-index:0;
       }
@@ -57,6 +57,27 @@
 
     }
 
+    #signup{
+      z-index: 9;
+      position: absolute;
+      float: left;
+      bottom: 10%;
+
+      a.btn{
+        position:relative;
+        margin-left:auto;
+        margin-right:auto;
+        letter-spacing:2px;
+      }
+    }
+
+
+    @media (max-width: 1600px) {
+      .event-date{
+        top:65%;
+      }
+
+    }
 
   @media (max-width: 768px) {
 
@@ -79,10 +100,9 @@
 
       .event-date{
         z-index:1;
-        top:85%;
-        margin-left: 10%;
-        width:80%;
-    }
+        font-size:30px;
+        top:65%;
+      }
   }
 
  }
