--- a/app/components/components-server/see-map-section.module.scss
+++ b/app/components/components-server/see-map-section.module.scss
@@ -10,6 +10,20 @@
     :global{
       .see-map-section{
         height:500px;
+
+        @media (max-width: 1200px) {
+            height: 30vw;
+          }
+
+        @media (max-width: 768px) {
+            height: 40vw;
+          }
+
+          @media (max-width: 400px) {
+            height: 160px;
+          }
+
+
       }
 
     }
