--- a/app/components/global/cover-section.module.scss
+++ b/app/components/global/cover-section.module.scss
@@ -21,7 +21,7 @@
         width:185px;
         height:80px;
         position:absolute;
-        z-index:1;
+        z-index:9;
 
         top: 40px;
         left: 12%;
@@ -87,18 +87,12 @@
 
   @media (max-width: 1200px) {
 
-
       .logo{
         display:initial;
         top:35%;
         left:unset;
         width:100%;
-        height:160px;
-
-        &.for-valcea{
-          height:105px;
-          top: 45%;
-        }
+        height: 120px;
       }
 
       .event-title{
@@ -107,8 +101,29 @@
 
       .event-date{
         z-index:1;
-        font-size:30px;
+        font-size:50px;
         top:65%;
+        text-shadow: 0px 0px 60px rgb(0 0 0);
+      }
+  }
+
+  @media (max-width: 768px) {
+
+      .logo{
+        height: 90px;
+      }
+
+      .event-date{
+        font-size:30px;
+        top:70%;
+      }
+  }
+
+  @media (max-width: 540px) {
+
+      .event-date{
+        font-size:22px;
+        text-shadow: 0px 0px 40px rgb(0 0 0);
       }
   }
 
