--- a/app/[year]/(projects)/[sibiu-valcea]/[slug]/page.module.scss
+++ b/app/[year]/(projects)/[sibiu-valcea]/[slug]/page.module.scss
@@ -72,6 +72,7 @@
               }
 
           .map-container{
+            position:relative;
             width:400px;
             height:400px;
           }
@@ -80,6 +81,8 @@
               width:650px;
               margin-left:calc(50% - 550px);
               padding-left: 30px;
+              text-align: justify;
+
               &.has-portable-text p {
                 line-height:40px;
               }
@@ -144,8 +147,9 @@
               }
 
           .map-container{
+            
             width:100%;
-            height:400px;
+            height:140px;
           }
 
           &.col-1{
@@ -153,6 +157,19 @@
             margin-left:0;
             margin-right:0;
             width:100%;
+            font-size: 14px;
+
+            &.has-portable-text p{
+              margin: 0;
+              // margin-top: 11px;
+              // line-height: 20px;
+              strong{
+                // margin-right:12px;
+                // margin-bottom:24px;
+                // float:left;
+                // clear:both;
+              }
+            }
           }
 
           &.col-2{
@@ -165,6 +182,19 @@
           }
 
         }
+
+        &#details-and-map-section{
+          border-bottom:none;
+
+          .col-2{
+                    margin-top: 30px;
+          }
+        }
+
+        &#other-info-section{
+          border-top:none;
+        }
+
 
       }
     }
