--- a/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
+++ b/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
@@ -1,15 +1,15 @@
 .mobile-non-swiper-projects{
   height: auto;
   width: 100%;
+  margin-top: 20px;
   // padding-bottom: 100px;
 
 :global{
 
     .swiper-slide{
-      // height:150vw;
+
       position:relative;
       background: #000;
-      // margin-bottom:10px;
 
       .col{
         width:100%;
@@ -34,7 +34,7 @@
           h6{
             text-align: left;
             font-size:22px;
-            color:#cefb08;
+            // color:#cefb08;
             margin-top:0px;
             margin-bottom:0px;
           }
@@ -53,6 +53,7 @@
       }
 
       .pin{
+        display:none;
         position:absolute;
         height:20px;
         width:20px;
@@ -65,17 +66,17 @@
 
 
     .swiper-pagination {
-      bottom:60px;
+      top: 195px;
+      height: 16px;
           .swiper-pagination-bullet{
               width:16px;
               height:16px;
               background:  #fff;
               opacity:1;
 
-              &.swiper-pagination-bullet-active{
-                background:  #ff0db9;
-                background:  #cefb08;;
-              }
+              // &.swiper-pagination-bullet-active{
+              //   background:  #cefb08;
+              // }
           }
 
     }
