--- a/app/components/components-server/see-map-section.module.scss
+++ b/app/components/components-server/see-map-section.module.scss
@@ -6,6 +6,7 @@
     float:left;
     // margin-top:30px;
     // margin-bottom:30px;
+    overflow: hidden;
 
     :global{
       .see-map-section{
