--- a/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
+++ b/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
@@ -1,7 +1,7 @@
 .mobile-non-swiper-projects{
   height: auto;
   width: 100%;
-  margin-top: 20px;
+  // margin-top: 20px;
   // padding-bottom: 100px;
 
 :global{
