--- a/app/[year]/sibiu/page.module.scss
+++ b/app/[year]/sibiu/page.module.scss
@@ -6,39 +6,53 @@
   
 :global{
 
+  .section-title-on-mobile{
+    position:relative;
+    line-height:100px;
+    float:left;
+    width:100%;
+    font-size:50px;
+    font-weight: bold;
+    text-align: center;
+    color: #000 !important;
+    text-transform: uppercase;
+    margin-top:10px;
+  }
+
+
   section{
     position:relative;
   }
 
-    section.swiper-section{
+  section.swiper-section{
+    float:left;
+    position:relative;
+    
+    height: 400px;
+    width: 100%;
+    margin-top:10px;
+
+    @media (max-width: 768px) {
+        height: auto;
+    }
+
+  }
+
+  section.mission-section{
       float:left;
-      position:relative;
-      
-      height: 400px;
-      width: 100%;
-      margin-top:10px;
-
-      @media (max-width: 768px) {
-          height: auto;
-      }
-
     }
 
-    section.mission-section{
-        float:left;
-      }
+  section.team-section{
+    position:relative;
+    float:left;
+    width:100%;
+    height:600px;
+    overflow: hidden;
+    margin-top:30px;
+    margin-bottom:30px;
 
-      section.team-section{
-        position:relative;
-        float:left;
-        width:100%;
-        height:600px;
-        overflow: hidden;
-        margin-top:30px;
-        margin-bottom:30px;
+  }
 
-      }
-  
-    }
+  }
 
 }
