--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -46,8 +46,16 @@
   font-weight: bold;
 }
 
+.font-regular{
+  font-weight:normal;
+}
+
 .text-uppercase{
   text-transform: uppercase;
+}
+
+.font-size-45{
+  font-size: 45px !important;
 }
 
 .hide-long-text {
