--- a/app/[year]/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
+++ b/app/[year]/(events)/[sibiu-valcea]/event/[slug]/page.module.scss
@@ -7,10 +7,20 @@
 :global{
     section.swiper-section{
       position:relative;
-      
       height: calc(100vh - 40px);
       width: 100%;
 
+      @media (max-width: 768px) {
+        height: 300px;
+
+        .swiper-pagination {
+          bottom:20px;
+          .swiper-pagination-bullet{
+            width: 12px;
+            height: 12px;
+          }
+        }
+      }
     }
   
     section.info{
@@ -48,8 +58,14 @@
           h1{
                 font-weight: bold;
                 font-size:40px;
+                margin-top:0;
+                margin-bottom:0;
                 line-height: 50px;
               }
+
+          h2{
+            
+          }
 
           span.date{
                 font-size:30px;
