--- a/app/[year]/(tours)/[sibiu-valcea]/tur/[slug]/page.module.scss
+++ b/app/[year]/(tours)/[sibiu-valcea]/tur/[slug]/page.module.scss
@@ -7,9 +7,20 @@
 :global{
     section.swiper-section{
       position:relative;
-      
       height: calc(100vh - 40px);
       width: 100%;
+
+      @media (max-width: 768px) {
+        height: 300px;
+
+        .swiper-pagination {
+          bottom:20px;
+          .swiper-pagination-bullet{
+            width: 12px;
+            height: 12px;
+          }
+        }
+      }
 
     }
   
