--- a/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
+++ b/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
@@ -66,7 +66,7 @@
 
 
     .swiper-pagination {
-      top: 195px;
+      top: 195px !important;
       height: 16px;
           .swiper-pagination-bullet{
               width:16px;
