--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -89,6 +89,49 @@
     text-overflow: ellipsis;
 }
 
+//////// graphics utils
+.inner-shadow-top{
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0px;
+      width: 100%;
+      height: 25%;
+      pointer-events: none;
+      z-index: 99;
+      background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+  }
+}
+
+.inner-shadow-right{
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0px;
+      right:0;
+      width: 25%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 99;
+      background: linear-gradient(-90deg, rgba(0, 0, 0, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+  }
+}
+
+.inner-shadow-left{
+    &:before {
+      content: "";
+      position: absolute;
+      top: 0px;
+      left:0;
+      width: 25%;
+      height: 100%;
+      pointer-events: none;
+      z-index: 99;
+      background: linear-gradient(90deg, rgba(0, 0, 0, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+  }
+}
+
+
 
 //////// sanity specific
 .has-portable-text p{
