mobile nav improvments

--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -102,6 +102,10 @@ nav#custom-responsive-nav:not(.no-highlight-on-nav):before{
 
 ////mobile
 
+* {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0.2); 
+}
+
 nav#custom-responsive-nav.open {
   display: flex;
   background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgb(0 0 0 / 46%) 0%, rgb(0 0 0 / 33%) 100%);
@@ -110,17 +114,19 @@ nav#custom-responsive-nav.open {
 @media (max-width: 768px) {
     nav#custom-responsive-nav {
       display: none;
-      top: 40px;
-      height: calc(100% - 40px);
-      width: 100%;
+      // top: 40px;
+      // height: calc(100% - 40px);
+      top: 0px;
+      height: 100%;
       margin-top: 0;
-      position: absolute;
+      position: fixed;
 
       .flex-container {
         flex-direction: column;
         margin-top: 0px;
         height: 100%;
         width:100%;
+        padding-bottom: 30px;
 
         .mobile-menu-background {
           display: block !important;
@@ -130,23 +136,36 @@ nav#custom-responsive-nav.open {
             float: left;
             color: #fff;
             font-size: 20px;
+            text-align: center;
+            width:100%;
+            text-align:center;
+
+            &:hover{background:unset;}
 
             &:after{
               border-color: #fff;
             }
+
           }
 
         .dropdown-container {
           position: relative;
           display: inline-block;
           text-transform: inherit;
+          width:100%;
+
+          &.open{
+            background: #000000;
+          }
           
           .dropdown-menu {
-            // background: rgba(0, 0, 0, 0.664);
+            padding-top: 0px;
+            padding-bottom: 10px;
             position:relative;
             clear:both;
             float:left;
             top:0;
+            width:100%;
             
 
             .dropdown-link{
@@ -233,11 +252,28 @@ nav#custom-responsive-nav.open {
 
   @media (max-width: 768px) {
     display: block;
+    &.scrolled-past-100vh{
+      top:10px;
+      background: rgba(0, 0, 0, 0.64);
+      position:fixed;
+    }
   }
 }
 
 body.mobile-nav-open{
-  overflow:hidden;
+
+  #nav-mobile{
+    position: fixed;
+  }
+
+  &.is-scrolled{
+    #nav-mobile{
+      top:10px;
+    }
+    #custom-responsive-nav{
+      background: rgba(0, 0, 0, 0.60);
+    }
+  }
 
   .logo{
     display:none;
