--- a/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
+++ b/app/components/swiper/swiper-responsive/mobile-non-swiper-projects.module.scss
@@ -33,10 +33,18 @@
 
           h6{
             text-align: left;
-            font-size:22px;
-            // color:#cefb08;
+            
             margin-top:0px;
             margin-bottom:0px;
+
+             &.title{
+                font-size:22px;
+                margin-bottom:5px;
+            }
+
+            &.subtitle{
+                font-size:16px;
+            }
           }
         
 
@@ -69,8 +77,8 @@
       top: 195px !important;
       height: 16px;
           .swiper-pagination-bullet{
-              width:16px;
-              height:16px;
+              width: 12px;
+              height: 12px;
               background:  #fff;
               opacity:1;
 
