--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -6,6 +6,7 @@
     div.section{
         width:50%;
         height: 100%;
+        height: 100dvh;
         float:left;
         position: relative;
         background-repeat: no-repeat;
@@ -69,6 +70,7 @@
       div.section{
         width:100%;
         height: 50%;
+        height: 50dvh;
 
         .oar{
             width:120px;
