--- a/app/components/components-server/mission-section.module.scss
+++ b/app/components/components-server/mission-section.module.scss
@@ -18,7 +18,7 @@
         text-justify: inter-word;
 
         &.col-1 {
-          padding-left: 1%;
+          padding-left: 3%;
         }
 
         &.col-2 {
@@ -28,11 +28,31 @@
         }
 
         &.col-3 {
-          padding-right: 1%;
+          padding-right: 3%;
         }
       }
 
-    }
+        @media (max-width: 2400px) {
+          height: 490px;
+        }
+
+  
+        @media (max-width: 1800px) {
+          height: 530px;
+        }
+
+        @media (max-width: 1600px) {
+          height: 590px;
+        }
+
+        @media (max-width: 1400px) {
+          height: 660px;
+        }
+
+        @media (max-width: 1200px) {
+          height: 770px;
+        }
+     }
 
      @media (max-width: 768px) {
         .mission-section {
