--- a/app/components/components-server/footer-section.module.scss
+++ b/app/components/components-server/footer-section.module.scss
@@ -23,19 +23,41 @@
       }
 
       .col{
-        width: 33.333%;
+        
         float:left;
         padding-left: 60px;
 
         &.col-1{
+          width: 44%;
           color:#fff;
           float:left;
           line-height: 40px;
           font-size: 20px;
+          font-weight: bold;
         }
+
+        &.col-2{ width:28%;}
+        &.col-3{ width:28%;}
+      }
+    
+
+      @media (max-width: 1200px) {
+          .col {
+            &.col-1{ width:44%; font-size:16px;}
+            &.col-2{ width:28%;}
+            &.col-3{ width:28%;}
+          }
       }
 
+      @media (max-width: 768px) {
 
+          .col {
+            &.col-1{ width:100%; line-height: 24px; margin-bottom:30px}
+            &.col-2{ width:50%;}
+            &.col-3{ width:50%;}
+          }
       }
+
+    }
   }
 }
