--- a/app/[year]/sibiu/page.module.scss
+++ b/app/[year]/sibiu/page.module.scss
@@ -17,6 +17,11 @@
     color: #000 !important;
     text-transform: uppercase;
     margin-top:10px;
+    overflow:hidden;
+
+    @media (max-width: 320x) {
+        font-size:40px;
+    }
   }
 
 
