--- a/app/components/components-server/footer-section.module.scss
+++ b/app/components/components-server/footer-section.module.scss
@@ -8,9 +8,9 @@
       width: 100%;
       background: #000;
       float: left;
-      // margin-top:10px;
       padding-top: 30px;
       padding-bottom: 30px;
+      overflow:hidden;
 
       a.link{
         color:#fff;
