--- a/app/components/google-maps/google-map.module.scss
+++ b/app/components/google-maps/google-map.module.scss
@@ -12,6 +12,8 @@
       transform: translate(-50%, -100%);
       opacity: 0;
       transition: opacity 0.5s ease-in-out;
+      border:3px solid #CEFB08;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
       
     }
 
@@ -25,10 +27,11 @@
       // border-radius: 8px;
       padding: 6px 8px;
       color: rgb(0, 0, 0);
-      font-size: 14px;
-      font-weight: bold;
+      color: rgb(0, 0, 0);
+      font-size: 13px;
+      // font-weight: bold;
       // box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-      text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.6);
+      // text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.6);
       white-space: nowrap;
     }
 
@@ -50,6 +53,8 @@
       border-top: 10px solid #ff4d4f;
       border-top: 10px solid #CEFB08 ;
       margin: 0 auto;
+      left: calc(50% - 8px);
+      position: absolute;
     }
 }
   
