--- a/app/components/components-server/see-map-section.module.scss
+++ b/app/components/components-server/see-map-section.module.scss
@@ -1,7 +1,7 @@
 
 .namespace-container{
     width:100%;
-    margin-top:10px;
+    float:left;
     
     // overflow: hidden;
     float:left;
@@ -22,9 +22,9 @@
 
         @media (max-width: 768px) {
 
-            width:calc(100% + 48px);
-            left:-24px;
-            height: 40vw;
+            // width:calc(100% + 48px);
+            // left:-24px;
+            // height: 40vw;
           }
 
           @media (max-width: 400px) {
