--- a/app/components/google-maps/google-map.module.scss
+++ b/app/components/google-maps/google-map.module.scss
@@ -1,61 +1,115 @@
+// google-map.module.scss
+
 .namespace-container{
   position:relative;
   float:left;
   width:100%;
-  height:100dvh;
+  height: calc(100dvh - 40px);
   
   :global{
 
-    .overlayContainer {
-      cursor: pointer;
-      text-align: center;
-      transform: translate(-50%, -100%);
-      opacity: 0;
-      transition: opacity 0.5s ease-in-out;
-      border:3px solid #CEFB08;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-      
-    }
+    
+      .marker-container {
+        cursor: pointer;
+        text-align: center;
+        transform: translate(-50%, -100%);
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+        border:3px solid;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+        
+      }
 
     .fadeIn{
         opacity:1;
       }
 
-    .markerBox {
-      background: #ff4d4f;
-      background: #CEFB08 ;
-      // border-radius: 8px;
+    a.title-link{
+      text-decoration: none;
+
+    .marker-text {
       padding: 6px 8px;
-      color: rgb(0, 0, 0);
-      color: rgb(0, 0, 0);
+      color: #000;
       font-size: 13px;
-      // font-weight: bold;
-      // box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-      // text-shadow: 0px 0px 30px rgba(0, 0, 0, 0.6);
+      text-decoration: none;
       white-space: nowrap;
     }
 
     .markerImage {
-      width: 200px;
-      height: 120px;
+      width: 150px;
+      height: 80px;
+
+      width: 130px;
+      height: 130px;
       position:relative;
-      // object-fit: cover;
-      // border-radius: 4px;
-      // display: block;
-      // margin-bottom: 4px;
     }
 
-    .markerArrow {
+    .marker-arrow {
       width: 0;
       height: 0;
       border-left: 8px solid transparent;
       border-right: 8px solid transparent;
-      border-top: 10px solid #ff4d4f;
-      border-top: 10px solid #CEFB08 ;
       margin: 0 auto;
       left: calc(50% - 8px);
       position: absolute;
     }
+  }
+    .pin-1 {
+        left: calc(50% - 10px);
+        bottom: -6px;
+        position: absolute;
+        
+        border-radius: 50% 50% 50% 0;
+        border: 4px solid #ffffff;
+        width: 20px;
+        height: 20px;
+        transform: rotate(-45deg);
+      
+      &:after {
+        position: absolute;
+        content: '';
+        width: 10px;
+        height: 10px;
+        border-radius: 50%;
+        top: 50%;
+        left: 50%;
+        margin-left: -5px;
+        margin-top: -5px;
+        background-color: #fff;
+      }
+    }
 }
   
 }
+
+
+   .namespace-container {
+
+    :global(body.city-is-sibiu) & {
+      :global(.marker-container ) {
+        border-color: #cefb08;
+      }
+
+      :global(.marker-arrow) {
+        border-top: 10px solid #cefb08;
+      }
+    }
+
+    :global(body.city-is-valcea) & {
+      :global(.marker-container ) {
+              border-color: #ff0db9;
+            }
+
+      :global(.marker-text ) {
+        color: #fff;
+      }
+
+      :global(.marker-arrow) {
+        border-top: 10px solid #ff0db9;
+      }
+    }
+
+
+}
+
+    
