--- a/app/components/google-maps/google-map.module.scss
+++ b/app/components/google-maps/google-map.module.scss
@@ -17,6 +17,8 @@
         transition: opacity 0.5s ease-in-out;
         border:3px solid;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+
+        
         
       }
 
@@ -33,6 +35,9 @@
       font-size: 13px;
       text-decoration: none;
       white-space: nowrap;
+      &:hover{
+          opacity:0.7;
+        }
     }
 
     .markerImage {
