--- a/app/styles/_utils.scss
+++ b/app/styles/_utils.scss
@@ -51,6 +51,12 @@
 }
 
 
+.fill-container{ 
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+}
+
 /////// flex utils
 
 .flex-container {
