--- a/app/styles/_mobile-specific.scss
+++ b/app/styles/_mobile-specific.scss
@@ -5,20 +5,20 @@
 }
 
 @media (hover: none) and (pointer: coarse) {
-  a:hover, a:active, [data-mobile-highlight]:hover, [data-mobile-highlight]:active  {
+  a, a:hover, a:active, [data-mobile-highlight]:hover, [data-mobile-highlight]:active  {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0.7) !important;
-    background-color: rgba(0, 0, 0, 0.55);
-    z-index:9999999;
+    // background-color: rgba(0, 0, 0, 0.55);
+    // z-index:9999999;
 
-    &:after{
-      content:'';
-      top:0;
-      left:0;
-      position:absolute;
-      width:100%;
-      height:100%;
-      background: rgba(0, 0, 0, 0.7);
+    // &:after{
+    //   content:'';
+    //   top:0;
+    //   left:0;
+    //   position:absolute;
+    //   width:100%;
+    //   height:100%;
+    //   background: rgba(0, 0, 0, 0.7);
       
-    }
+    // }
   }
 }
