--- a/app/components/components-server/see-map-section.module.scss
+++ b/app/components/components-server/see-map-section.module.scss
@@ -15,6 +15,24 @@
         margin-top:0px;
         margin-bottom:0px;
         height:500px;
+        &:before{
+            content:'';
+            box-sizing: border-box;
+            width:calc(100% + 10px);
+            height:calc(100% + 10px);
+            position:absolute;
+            top:-5px;
+            left:-5px;
+            background: #000000;
+            z-index:999;
+            opacity:0;
+            transition: opacity 0.15 step-end;
+            pointer-events:none;
+          }
+        &:hover:before{
+          opacity:0.05;
+
+        }
 
         @media (max-width: 1200px) {
             height: 30vw;
