--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -11,6 +11,22 @@ nav#custom-responsive-nav {
   width: 100%;
   z-index: 8;
 
+  .social-icon{
+    display:flex;
+    width:40px;
+    height:40px;
+    padding: 5px;
+    position:relative;
+
+    &:hover{
+        background: rgba(0, 0, 0, 0.664);
+    }
+    svg{
+      width:100%;
+      height:100%;
+    }
+  }
+
   .flex-container {
     align-items: center;
     justify-content: center;
@@ -33,7 +49,6 @@ nav#custom-responsive-nav {
       letter-spacing: 4px;
 
       &:hover {
-        background: #ffffff7a;
         background: rgba(0, 0, 0, 0.664);
       }
     }
@@ -130,11 +145,9 @@ nav#custom-responsive-nav.open {
         }
 
         a.link {
-            float: left;
             color: #fff;
             font-size: 20px;
             text-align: center;
-            width:100%;
             text-align:center;
 
             &:hover{background:unset;}
@@ -146,6 +159,7 @@ nav#custom-responsive-nav.open {
           display: inline-block;
           text-transform: inherit;
           width:100%;
+          text-align: center;
 
           a.link:after{
               border-color: #fff;
@@ -202,7 +216,7 @@ nav#custom-responsive-nav.open {
   padding: 18px 12px;
   background: rgb(0 0 0 / 34%);
 
-  a.main-nav-toggle {
+  .main-nav-toggle {
     display: block;
     width: 36px;
     height: 24px;
