--- a/app/styles/_nav.scss
+++ b/app/styles/_nav.scss
@@ -11,22 +11,6 @@ nav#custom-responsive-nav {
   width: 100%;
   z-index: 8;
 
-  .social-icon{
-    display:flex;
-    width:40px;
-    height:40px;
-    padding: 5px;
-    position:relative;
-
-    &:hover{
-        background: rgba(0, 0, 0, 0.664);
-    }
-    svg{
-      width:100%;
-      height:100%;
-    }
-  }
-
   .flex-container {
     align-items: center;
     justify-content: center;
@@ -115,6 +99,45 @@ nav#custom-responsive-nav:not(.no-highlight-on-nav):before{
   background: linear-gradient(180deg,rgba(0, 0, 0, 0.56) 0%, rgba(255, 255, 255, 0) 100%);
 
 }
+
+.social-media-section{
+  position:absolute;
+  right:10px;
+  top:70px;
+  z-index: 8;
+
+  .social-icon{
+    float: left;
+    display: block;
+    width:40px;
+    height:40px;
+    padding: 5px;
+    position:relative;
+    margin-right:10px;
+
+    &:hover{
+        background: rgba(0, 0, 0, 0.664);
+    }
+    svg{
+      width:100%;
+      height:100%;
+    }
+  }
+
+  @media (max-width: 768px) {
+
+    position:absolute;
+    right:0px;
+    top:55px;
+    
+    .social-icon{
+      width:50px;
+      height:50px;
+    }
+
+  }
+}
+
 
 
 
